--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Land Records</string>
+    <string name="app_name">Bhulekh</string>
 
     <string name="ADMOB_APP_ID">ca-app-pub-7920815986886474~4781554169</string>
 
@@ -7,7 +7,5 @@
     <string name="ADMOB_OPEN">ca-app-pub-7920815986886474/5235153180</string>
     <string name="ADMOB_FULL">ca-app-pub-7920815986886474/5143637931</string>
     <string name="ADMOB_NATIVE">ca-app-pub-7920815986886474/6876253864</string>
-    <string name="ADMOB_REWARDED">ca-app-pub-7920815986886474/1332283146</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
